fix: adjust PlanCard layout on mobile view

--- a/src/components/PlanCard/PlanCard.scss
+++ b/src/components/PlanCard/PlanCard.scss
@@ -9,8 +9,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 16px;
 
     @media (min-width: 1024px) {
+      margin-bottom: 0px;
       width: 288px;
     }
 
